# template-pypackage

./: .bumpversion.cfg  .gitignore  404.html  LICENSE  README.md  cookiecutter.json  index.html  mkdocs.yml  requirements.txt  tox.ini
.github/workflows/: dev.yml  publish.yml
console_script_setup/: index.html
docs/: console_script_setup.md  faq.md  history.md  pypi_release_checklist.md  tutorial.md
faq/: index.html
history/: index.html
hooks/: post_gen_project.py  pre_gen_project.py
pypi_release_checklist/: index.html
search/: search_index.json
tests/: test_bake_project.py
tutorial/: index.html
{{cookiecutter.project_name_slug}}/: .bumpversion.cfg  .editorconfig  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  environment.yml  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py  tox.ini
{{cookiecutter.project_name_slug}}/.github/workflows/: dev.yml
{{cookiecutter.project_name_slug}}/docs/: installation.md  usage.md
{{cookiecutter.project_name_slug}}/tests/: __init__.py  test_{{cookiecutter.package_name}}.py
{{cookiecutter.project_name_slug}}/{{cookiecutter.package_name}}/: __main__.py  cli.py
